[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }

render = { package = "sailfish-render", path = "../crates/sailfish-render" }
operation = { path = "../crates/operation" }
loader = { path = "../crates/loader" }
