[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

render = { package = "tera-render", path = "../crates/tera-render" }
operation = { path = "../crates/operation" }
loader = { path = "../crates/loader" }
strune_core = { path = "../strune_core" }
